@@ -1,7 +1,8 @@
+stefan; 10 sept 2003: fixed bug 557 (drop support for mak:list/object header= and footer=)
 stefan; 20 aug 2003: extended test suite, now ready for additional tests
 stefan; 6 aug 2003: bug 171 fixed (record printer now prints description of subtables)
 stefan; 22 jul 2003: bug 4 improved (uses databaseMetaData,getIndexInfo() to manageIndexes() )
-stefan; 16 jul 2003: bug 3 fixeed (ptrIndex and ptrOne are declared as unique)
+stefan; 16 jul 2003: bug 3 fixed (ptrIndex and ptrOne are declared as unique)
 stefan; 15 jul 2003: bug 4 fixed (unique indexes created and dropped in the DB as needed during table checking)
 stefan; 4 jul 2003: unique MDD keyword supported on abstract level and is used in table creation (part of bug 4)
 stefan; 2 jul 2003:improved solution for bug 449 (mak:value  maxLength, ellipsis...)
